spec/e2e/assignment/infix_operator.lit
var a = "a"
var b = "b"
a + b = "value" # error: [line 3] Syntax error at "=": Invalid assignment target.
